<resources>
    <string name="app_name">QRCodeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_row_id">1</string>
    <string name="custom_row_firstname">Ivan</string>
    <string name="custom_row_department">Energy</string>
    <string name="department_txt">department:</string>
    <string name="custom_row_lastname">Ivanov</string>
    <string name="text_firstname_add">Введите имя</string>
    <string name="text_lastname_add">Введите фамилию</string>
    <string name="text_department_add">Введите отдел</string>
    <string name="text_email_add">Введите почту</string>
    <string name="text_password_add">Введите пароль</string>
    <string name="btn_text_add_user">Добавить пользователя</string>
    <string name="update_data_user_btn">Обновить данные пользователя</string>

    <!--Generate page-->
    <string name="hint_enter_your_text">Введите текст</string>
    <string name="error_provide_proper_content_and_type">Пожалуйста предоставьте правильную информацию</string>
    <string name="error_barcode_content_limit">Длина содержимого штрих-кода должна быть от 1 до 80</string>
    <string name="error_qrcode_content_limit">Длина содержимого QR-кода должна быть от 1 до 1000</string>


    <!--Generated QR Code page-->
    <string name="toolbar_title_generated_qr_code">Создать QR Код</string>
    <string name="code_type">Тип: %s</string>
    <string name="content">Контент: %s</string>
    <string name="saved_the_code_successfully">Код успешно сохранен</string>
    <string name="failed_to_save_the_code">не удалось сохранить код</string>
    <string name="failed_to_share_the_code">не удалось поделиться кодом</string>
    <string name="file_name_body">%s_%s</string>
    <string name="generated_qr_code_already_exists">Сгенерированный код уже существует в хранилище</string>
    <string name="share_code_using">Поделитесь кодом используя…</string>

    <!--Scan page-->
    <string name="flash">Flash</string>
    <string name="scan_gallery">Из Галереи</string>
    <string name="error_occured_while_scanning">Произошла ошибка при сканировании</string>
    <string name="error_could_not_load_the_image">Не удалось загрузить изображение</string>
    <string name="error_did_not_find_any_content">Не найден контент. Попробуйте с другим изображением</string>

    <!--Scan result page-->
    <string name="toolbar_title_scan_result">Результат сканирования</string>
    <string name="open_in_browser">Открыть в браузере</string>
    <string name="created_time">Время создания: %s</string>
    <string name="scanned_qr_code_content">Содержание отсканированного кода</string>
    <string name="copied_to_clipboard">Копировать в буфер</string>
</resources>