<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/two_blue"
    android:padding="24sp"
    android:id="@+id/rowLayout"
    >

    <TextView
        android:id="@+id/id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_row_id"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/two_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstname_txt"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/custom_row_firstname"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/id_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/department_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:text="@string/custom_row_department"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_base"
        app:layout_constraintTop_toBottomOf="@+id/lastname_txt" />

    <TextView
        android:id="@+id/txt_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/department_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/id_txt"
        app:layout_constraintTop_toBottomOf="@+id/firstname_txt" />

    <TextView
        android:id="@+id/lastname_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/custom_row_lastname"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/firstname_txt"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>